# xiaoai-agent

./: .gitignore  AGENTS.md  README.md
deploy/: OH2P_1.62.2_BUILD_NOTES.md  README.md
deploy/client-patch/: .gitignore  README.md  package-lock.json
deploy/client-patch/src/: extract.sh  ota.ts  squashfs.sh
deploy/flash-tool/: README.md  flash-oh2p-1622.sh
docs/superpowers/plans/: 2026-07-15-web-config-ui.md
docs/superpowers/specs/: 2026-07-15-web-config-ui-design.md
upstream-open-xiaoai/: README.md  UPSTREAM.md
xiaoai-agent/: Cargo.toml  README.md  agent.example.yaml
xiaoai-agent/.cargo/: cmake-armv7.sh  config.toml
xiaoai-agent/src/: agent.rs  asr.rs  capture.rs  config.rs  device.rs  main.rs  mcp.rs  music.rs  qwen_realtime.rs  qwen_voice.rs  shell.rs  tools.rs
xiaoai-agent/src/audio/: record.rs
xiaoai-agent/src/monitor/: kws.rs
xiaoai-agent/src/qwen_voice/: webrtc_session.rs
xiaoai-agent/src/web/: api.rs  config_store.rs  index.html  mod.rs  restart.rs  status.rs
xiaoai-agent/tests/fixtures/: qwen_client_session_update.json  qwen_server_response_done.json  qwen_server_session_updated.json
