[package]
name = "xiaoai-agent"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
debug = false

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
libloading = "0.8"
md5 = "0.7"
rand = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["gzip", "json", "multipart", "rustls", "stream"] }
rig-core = { version = "0.39", features = ["rmcp"] }
rmcp = { version = "1.8", features = ["client", "reqwest", "transport-streamable-http-client-reqwest"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
shairplay = { version = "0.7.0", default-features = false }
shell-words = "1"
sse-stream = "0.2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
